--- a/css/conditions.css
+++ b/css/conditions.css
@@ -2,8 +2,7 @@
 
 /* ----- Hero (brick texture) ----- */
 .conditions-hero {
-    background-color: #e8e6e3;
-    background-image: url("../assets/images/Conditions/brick-wall.jpg");
+    background-color: #286241;
     padding: 56px 24px 48px;
     text-align: center;
     min-height: 320px;
@@ -18,24 +17,24 @@
     margin: 0 0 12px;
     font-size: 70px;
     font-weight: 700;
-    color: #3c4b58;
+    color: #fff;
     font-family: noto-sans-bold;
     letter-spacing: -0.02em;
 }
 
 .conditions-breadcrumb {
     font-size: 14px;
-    color: #6b6b6b;
+    color: #fff;
     font-family: noto-sans, sans-serif;
 }
 
 .conditions-breadcrumb a {
-    color: #6b6b6b;
+    color: #fff;
     text-decoration: none;
 }
 
 .conditions-breadcrumb a:hover {
-    color: #286241;
+    color: #C1FF72;
     text-decoration: underline;
 }
 
@@ -114,7 +113,7 @@
 
 /* ----- CTA (dark green) ----- */
 .conditions-cta {
-    background-color: #334037;
+    background-color: #286241;
     padding: 96px 24px;
     text-align: center;
 }
