--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@
 /* ----- About Page Title Banner ----- */
 
 .welcome-inner {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     font-family: noto-sans;
 }
@@ -16,7 +16,7 @@
     background-size: cover;
     background-position: center;
     border-radius: 20px;
-    margin-right: 15px;
+    margin: 15px;
 }
 
 .welcome-heading {
